--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,9 @@ footer a {
     background-image: url("../images/hero-bg.jpg");
     background-size: cover;
     background-position: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .hero-cta {
@@ -99,9 +102,6 @@ footer a {
     background-color: #fce138;
     padding: 20px;
     color: #024e76;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
     width: 40%;
     margin: 3.5;
 }
@@ -277,17 +277,16 @@ footer a {
     color: #fce138;
 }
 
+.contact-info{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 .contact-info iframe {
-    width: 400px;
     height: 400px;
 }
 
 .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
 }
 
@@ -297,7 +296,7 @@ footer a {
 }
 
 .contact-info p, .contact-info address {
-    margin: 20px 0;
+    margin: 16px 0;
     line-height: 1.5;
     font-size: 20px;
     font-style: normal;
@@ -306,3 +305,25 @@ footer a {
 .contact-info a {
     color: #fce138;
 }
+
+.content-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
+
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+}
+
