--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -282,6 +282,12 @@ footer a {
     justify-content: space-between;
     flex-wrap: wrap;
 }
+
+.contact-info > * {
+    flex: 1;
+    margin: 15px;
+}
+
 .contact-info iframe {
     height: 400px;
 }
@@ -296,9 +302,9 @@ footer a {
 }
 
 .contact-info p, .contact-info address {
-    margin: 16px 0;
+    margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
 }
 
