--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -80,6 +80,7 @@ footer a {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -88,7 +89,7 @@ footer a {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -153,7 +154,7 @@ footer a {
 }
 
 .section-title {
-    font-size:55px;
+    font-size:48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -333,3 +334,16 @@ footer a {
     font-size: 16px;
 }
 
+/* Media Query for Smaller desktop screens and smaller*/
+@media screen and (max-width: 980px) {
+   
+}
+/* Media Query for Tablets and Smaller */
+@media screen and (max-width:768px) {
+    
+}
+
+/*Media Query for Mobile Phones and Smaller */
+@media screen and (max-width: 575px) {
+   
+}
